# monica

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: features.md  introduction.md  recipes.md  usage.md
docs/guides/: advanced-tips.md  audio-conversion.md  formats-explained.md  getting-started.md  troubleshooting.md  video-conversion.md  youtube-guide.md
src/: __init__.py  executor.py  ffmpeg_manager.py  file_selector.py  logger.py  menu.py  recipes.py
src/monica/: __init__.py  executor.py  ffmpeg_manager.py  main.py  menu.py
tests/: __init__.py  conftest.py  test_executor.py  test_ffmpeg_manager.py  test_file_selector.py  test_logger.py  test_main.py  test_recipes.py
